--- a/setenv.template
+++ b/setenv.template
@@ -3,3 +3,4 @@ export CONFIG=<your secret js config file>
 export AWS_ACCESS_KEY_ID=<your access key>
 export AWS_SECRET_ACCESS_KEY=<your secret key>
 export AWS_REGION=<your region>
+export PORT=3000
