--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "psyexpbe",
+  "name": "psyexp",
   "version": "0.0.1",
   "description": "Simplest possible backend for psychological (or any) experiment",
-  "main": "psyexpbe.js",
+  "main": "psyexp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
